--- a/backend/src/web/templates/base.html
+++ b/backend/src/web/templates/base.html
@@ -30,17 +30,20 @@
 </head>
 
 <body>
+
 <div class="container">
-	<div class="row clearfix">
+
+    {% macro selecionar_barra(aba_selecionada='') %}
+    <div class="row clearfix">
 		<div class="col-md-12 column">
 			<nav class="navbar navbar-default navbar-inverse" role="navigation">
 				<div class="navbar-header">
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">iCloud</a>
 				</div>
-				
+
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li>
+						<li {{ 'class = active' if aba_selecionada == 'CURSO' }}>
 							<a href="/curso/crud">Cursos</a>
 						</li>
 						<li>
@@ -101,10 +104,16 @@
 						</li>
 					</ul>
 				</div>
-				
+
 			</nav>
 		</div>
 	</div>
+{% endmacro %}
+
+    {% block barra %}
+        {{ selecionar_barra() }}
+    {% endblock %}
+
     {% block conteudo %}
 	<div class="row clearfix">
 		<div class="col-md-12 column">
